--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "evergreen-ui": "^5.1.2",
+    "firebase": "^8.2.8",
+    "firebase-admin": "^9.5.0",
     "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1"
